Closed Bug 1669390 Opened 5 years ago Closed 5 years ago

We're failing to track telemetry for silent printing when print.tab_modal.enabled is true

Categories

(Core :: Printing: Setup, defect, P2)

defect

Tracking

()

RESOLVED FIXED
83 Branch
Tracking Status
firefox82 --- fixed
firefox83 --- fixed

People

(Reporter: jwatt, Assigned: jwatt)

Details

(Whiteboard: [print2020_v82][old-ui-])

Attachments

(1 file)

Bug 1662222 changed the settingsAreComplete variable so that we include invocations by extensions which tend to be where our silent prints come from. That means we don't enter the block of code that tracks silent prints in early-beta-and-earlier where the pref is on by default..

https://searchfox.org/mozilla-central/rev/35245411b9e8a911fe3f5adb0632c3394f8b4ccb/layout/printing/nsPrintJob.cpp#642-648,653,663-665

FWIW, the telemetry code was originally written that way to avoid counting silent prints in the two "dialog opened" probes.

Assignee: nobody → jwatt
Status: NEW → ASSIGNED
Pushed by jwatt@jwatt.org: https://hg.mozilla.org/integration/autoland/rev/1adba2961bf0 Fix silent printing telemetry when print.tab_modal.enabled is true. r=bobowen

Comment on attachment 9179774 [details]
Bug 1669390. Fix silent printing telemetry when print.tab_modal.enabled is true. r=bobowen

Beta/Release Uplift Approval Request

  • User impact if declined: We can't filter out print paper sizes from add-on initiated prints, which limits the usefulness of the paper size telemetry we're gathering.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Very simple patch with affect limited to telemetry gathering only. In the event that something was wrong with the patch, we'd break the already broken telemetry in a different way.
  • String changes made/needed:
Attachment #9179774 - Flags: approval-mozilla-beta?

Comment on attachment 9179774 [details]
Bug 1669390. Fix silent printing telemetry when print.tab_modal.enabled is true. r=bobowen

approved for 82.0b8

Attachment #9179774 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: