Bug 1669390. Fix silent printing telemetry when print.tab_modal.enabled is true. r=bobowen

Differential Revision: https://phabricator.services.mozilla.com/D92531